Commit_3: Fixed the org name in experience section

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Decision Scientist</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
+              <div class="subheading mb-3">Mu Sigma Inc.</div>
               <p>Designed & introduced a new approach to consumer protection, by moving away from 
                 relying on disclosure as the main form of protection and introducing new measures 
                 to ensure that the products are distributed to targeted customers for whom they are 
