--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/Imperial-Debu31" target="_blank" rel="noopener">
+              <a href="https://github.com/imharshagrawal" target="_blank" rel="noopener">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
