Commit_5: Added cloud certification

--- a/index.html
+++ b/index.html
@@ -307,6 +307,9 @@
               Google Data Analytics - Coursera</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
+              AWS Cloud Practitioner Essentials - Coursera</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
               <b>Impact Award - </b>"Harsh has played a key role in unlocking 
               digital capabilities for the client as a part of 
               a major Mu Sigma engagement. His 
